loopwhile.LoopWhile.scala.error
Erreur de compilation :
LoopWhile:1: error: value estFaceMur is not a member of Boolean
while (false estFaceMur) {
             ^